# ancla-client

./: .gitignore  .goreleaser.yml  .pre-commit-config.yaml  Cargo.toml  LICENSE  Makefile  README.md  go.mod  go.sum  openapi.json
.github/workflows/: ci.yml  docs.yml  release.yml
Formula/: ancla.rb
cmd/ancla/: main.go
cmd/gen-docs/: main.go
codegen/: go.yaml  openapi-generator-ignore-go  openapi-generator-ignore-python  openapi-generator-ignore-ts  python.yaml  typescript.yaml
docs/: astro.config.mjs  competitive-matrix.html  competitive-matrix.md  package.json
docs/src/components/: CompetitiveMatrix.astro
docs/src/content/docs/: competitive-landscape.mdx  index.mdx
docs/src/content/docs/api/: applications.md  index.md  (+14 more)
docs/src/styles/: custom.css
internal/cli/: apps.go  apps_test.go  auth.go  browser.go  builds.go  cache.go  colors.go  completion.go  config.go  confirm.go  dbshell.go  deploy_action.go  deployments.go  deploys.go  docs.go  down.go  envs.go  errors.go  images.go  init_cmd.go  link.go  list.go  logs.go  open.go  orgs.go  projects.go  prompt.go  releases.go  root.go  root_test.go  run.go  scaffold.go  services.go  settings.go  shell.go  spinner.go  ssh.go  status.go  theme.go  update.go  (+2 more)
internal/config/: config.go  config_test.go
npm/ancla/: package.json
npm/ancla-darwin-arm64/: package.json
npm/ancla-darwin-x64/: package.json
npm/ancla-linux-arm64/: package.json
npm/ancla-linux-x64/: package.json
npm/ancla-win32-x64/: package.json
scripts/: enrich-openapi.py  gen-api-docs.py  install.sh  npm-init-packages.sh
sdks/go/: ancla.go  ancla_test.go  apps.go  builds.go  config.go  deployments.go  deploys.go  environments.go  errors.go  go.mod  images.go  models.go  orgs.go  projects.go  releases.go  services.go  workspaces.go
sdks/python/: pyproject.toml
sdks/python/src/ancla/: __init__.py  client.py  exceptions.py  models.py
sdks/python/tests/: test_client.py
sdks/typescript/: package-lock.json  package.json
sdks/typescript/src/: client.ts  errors.ts  index.ts  types.ts
sdks/typescript/tests/: client.test.ts
terraform-provider-ancla/: .goreleaser.yml  go.mod  main.go
terraform-provider-ancla/docs/: index.md
terraform-provider-ancla/docs/data-sources/: app.md  org.md  project.md
terraform-provider-ancla/docs/resources/: app.md  config.md  org.md  project.md
terraform-provider-ancla/examples/: main.tf
terraform-provider-ancla/internal/client/: client.go
terraform-provider-ancla/internal/provider/: provider.go
terraform-provider-ancla/internal/resources/: app.go  config.go  environment.go  org.go  project.go  service.go  workspace.go
(+24 files in other folders)
