[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ancla-sdk"
version = "0.1.0"
description = "Python SDK for the Ancla PaaS platform"

license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-httpx>=0.34",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ancla"]
