[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ancla-sdk"
version = "0.1.0"
description = "Python SDK for the Ancla PaaS platform"

license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-httpx>=0.34",
    "ruff>=0.9",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ancla"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific
]

[tool.ruff.format]
quote-style = "double"
